2009-10-04  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Checking for endianness of compiler.  Also
	checking for a 32-bit type integers.

2009-09-15  Stefan Jahn  <stefan@lkcc.org>

	* m4/complexcxx.m4: Using AS_VAR_IF() macro to work with Autoconf
	2.64 version.

2009-04-25  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.15 and bumped up to version
        0.0.16.

2008-04-11  Stefan Jahn  <stefan@lkcc.org>

	* autogen.sh: Using automake to add missing files for build if
	needed.  Removed these files from CVS.

2008-04-10  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.14 and bumped up to version
        0.0.15.

2007-12-30  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.13 and bumped up to version
        0.0.14.

2007-12-07  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Fixed Debian bug #437876 (handling nostrip build
	option).

2007-09-16  Stefan Jahn  <stefan@lkcc.org>

	* Loads of changes to avoid the "deprecated conversion from string
	constant to 'char*'" warning from the g++ 4.2.1 compiler.

2007-06-17  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.12 and bumped up to version
        0.0.13.

2007-03-18  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.11 and bumped up to version
        0.0.12.

2006-10-29  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Checking for admsXml program.  Aded verilog
	device directory.

2006-09-11  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Don't link using "-s" on MacOSX since it drops lazy
	dynamic symbol information.

2006-09-01  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.10 and bumped up to version
        0.0.11.

2006-05-29  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.9 and bumped up to version
        0.0.10.

2006-05-14  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Added -s (strip) to linker flags when no
	debugging enabled.
