@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
  * Boston, MA 02110-1301, USA.  
  *
- * $Id: matlab_producer.cpp,v 1.1 2009/10/04 20:44:47 ela Exp $
+ * $Id: matlab_producer.cpp,v 1.2 2009/10/05 16:10:58 ela Exp $
  *
  */
 
@@ -40,17 +40,21 @@
 /* Global variables. */
 FILE * matlab_out = NULL; // output file stream
 int matlab_symbols = 1;   // convert data names to have valid Matlab identifier
+int nr_bigendian = 0;     // endianness
+
+// Test endianness.
+static void initendian (void) {
+  unsigned char EndianTest[2] = { 1, 0 };
+  nr_int16_t x = * (nr_int16_t *) EndianTest;
+  nr_bigendian = (x == 1) ? 0 : 1;
+}
 
 // Writes a Matlab v4 header.
 static void matlab_header (nr_int32_t rows, nr_int32_t cols, char * name) {
 
   // MOPT
   char mopt[4];
-#if WORDS_BIGENDIAN
-  mopt[0] = 1; // big endian
-#else
-  mopt[0] = 0; // little endian
-#endif
+  mopt[0] = nr_bigendian ? 1 : 0; // endianness
   mopt[1] = 0; // always zero
   switch (sizeof (nr_double_t) * 8) {
     case 32: mopt[2] = 1; break;
@@ -167,6 +171,9 @@ void matlab_producer (void) {
 
   dataset * data = qucs_data;
   vector * v;
+
+  // initialize endianness
+  initendian ();
 
   // independent vectors and matrices
   for (v = data->getDependencies (); v != NULL; v = (vector *) v->getNext ()) {
